Update chat template reference

--- a/nb/Qwen_3_5_27B_A100(80GB).ipynb
+++ b/nb/Qwen_3_5_27B_A100(80GB).ipynb
@@ -669,7 +669,7 @@
         "id": "2TtleOtq2P5T"
       },
       "source": [
-        "We now have to apply the chat template for `GLM 4.7` onto the conversations, and save it to `text`."
+        "We now have to apply the chat template for `Qwen 3.5` onto the conversations, and save it to `text`."
       ]
     },
     {
